fix horizontal scroll

--- a/develop/css/responcive.scss
+++ b/develop/css/responcive.scss
@@ -221,7 +221,7 @@
     }
     .content__right-img {
         margin: 0 auto;
-        width: 90%;
+        width: 100%;
     }
     .page__cell-aboutus{
         flex-wrap: wrap;
